#ifndef HOUSE_MATERIALTYPE_H
#define HOUSE_MATERIALTYPE_H

enum MaterialType {
    WOOD,
    IRON
};

#endif //HOUSE_MATERIALTYPE_H
